fix profile picture so that it does not stretch and if it is too big it will crop to keep the height at 300px

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -19,9 +19,12 @@
   text-align: center;
 }
 
-.profile-pic{
-  height: 150px;
-  width: auto;
+.profile-pic {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 .card-body {
